yaml/nodeport.yaml
apiVersion: v1
kind: Service
annotations:
    # this part will make more sense later
    external-dns.alpha.kubernetes.io/hostname: www.dtcloudintern.com
metadata:
  name: webappservice
spec:
  type: NodePort
  selector:
    app: webapp
  ports:
  - port: 80
    targetPort: 80
