yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webappingress
spec:
  tls:
  - secretName: firstsecret
  defaultBackend:
    service:
      name: "webappservice"
      port:
        number: 80
